z
"make" -f nbproject/Makefile-Debug.mk QMAKE= SUBPROJECTS= .build-conf
make[1]: Entering directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
"make"  -f nbproject/Makefile-Debug.mk dist/Debug/GNU-Linux/23
make[2]: Entering directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
mkdir -p build/Debug/GNU-Linux
rm -f "build/Debug/GNU-Linux/debug.o.d"
g++    -c -g -std=c++14 -MMD -MP -MF "build/Debug/GNU-Linux/debug.o.d" -o build/Debug/GNU-Linux/debug.o debug.cpp
mkdir -p build/Debug/GNU-Linux
rm -f "build/Debug/GNU-Linux/main.o.d"
g++    -c -g -std=c++14 -MMD -MP -MF "build/Debug/GNU-Linux/main.o.d" -o build/Debug/GNU-Linux/main.o main.cpp
In file included from main.cpp:8:0:
include/debug-printer.h:10:7: error: ‘DebugPrinter’ is not a template
 class DebugPrinter : public levelOrderDisplay<Tree> {
       ^~~~~~~~~~~~
In file included from main.cpp:6:0:
include/tree23.h:23:7: note: previous declaration here
 class DebugPrinter;
       ^~~~~~~~~~~~
In file included from main.cpp:8:0:
include/debug-printer.h:24:8: error: ‘DebugPrinter’ is not a template
 inline DebugPrinter<Tree>::DebugPrinter(const Tree& in_tree, std::ostream& ostr) : levelOrderDisplay<Tree>{in_tree, ostr}
        ^~~~~~~~~~~~
include/debug-printer.h:24:80: error: explicit qualification in declaration of ‘DebugPrinter DebugPrinter(const Tree&, std::ostream&)’
 inline DebugPrinter<Tree>::DebugPrinter(const Tree& in_tree, std::ostream& ostr) : levelOrderDisplay<Tree>{in_tree, ostr}
                                                                                ^
include/debug-printer.h: In function ‘DebugPrinter DebugPrinter(const Tree&, std::ostream&)’:
include/debug-printer.h:24:80: error: return type ‘class DebugPrinter’ is incomplete
include/debug-printer.h:24:84: error: only constructors take member initializers
 inline DebugPrinter<Tree>::DebugPrinter(const Tree& in_tree, std::ostream& ostr) : levelOrderDisplay<Tree>{in_tree, ostr}
                                                                                    ^~~~~~~~~~~~~~~~~
include/debug-printer.h: At global scope:
include/debug-printer.h:29:8: error: function template-id ‘DebugPrinter<Tree>’ in nested-name-specifier
 inline DebugPrinter<Tree>::DebugPrinter(DebugPrinter& lhs) : levelOrderDisplay<Tree>{lhs}
        ^~~~~~~~~~~~~~~~~~
include/debug-printer.h:24:26: note: ‘template<class Tree> void DebugPrinter(const Tree&, std::ostream&)’ declared here
 inline DebugPrinter<Tree>::DebugPrinter(const Tree& in_tree, std::ostream& ostr) : levelOrderDisplay<Tree>{in_tree, ostr}
                          ^~
include/debug-printer.h:29:41: warning: inline variables are only available with -std=c++1z or -std=gnu++1z
 inline DebugPrinter<Tree>::DebugPrinter(DebugPrinter& lhs) : levelOrderDisplay<Tree>{lhs}
                                         ^~~~~~~~~~~~
include/debug-printer.h:29:41: error: ‘template<class Tree> int DebugPrinter’ conflicts with a previous declaration
include/debug-printer.h:24:26: note: previous declaration ‘void DebugPrinter(const Tree&, std::ostream&)’
 inline DebugPrinter<Tree>::DebugPrinter(const Tree& in_tree, std::ostream& ostr) : levelOrderDisplay<Tree>{in_tree, ostr}
                          ^~
include/debug-printer.h:29:55: error: ‘lhs’ was not declared in this scope
 inline DebugPrinter<Tree>::DebugPrinter(DebugPrinter& lhs) : levelOrderDisplay<Tree>{lhs}
                                                       ^~~
include/debug-printer.h:29:55: note: suggested alternative: ‘labs’
 inline DebugPrinter<Tree>::DebugPrinter(DebugPrinter& lhs) : levelOrderDisplay<Tree>{lhs}
                                                       ^~~
                                                       labs
include/debug-printer.h:29:60: error: expected ‘;’ before ‘:’ token
 inline DebugPrinter<Tree>::DebugPrinter(DebugPrinter& lhs) : levelOrderDisplay<Tree>{lhs}
                                                            ^
include/debug-printer.h:30:1: error: expected unqualified-id before ‘{’ token
 {
 ^
include/debug-printer.h:34:13: error: function template-id ‘DebugPrinter<Tree>’ in nested-name-specifier
 inline void DebugPrinter<Tree>::display_level(std::ostream& ostr, int level) noexcept
             ^~~~~~~~~~~~~~~~~~
include/debug-printer.h:24:26: note: ‘template<class Tree> void DebugPrinter(const Tree&, std::ostream&)’ declared here
 inline DebugPrinter<Tree>::DebugPrinter(const Tree& in_tree, std::ostream& ostr) : levelOrderDisplay<Tree>{in_tree, ostr}
                          ^~
include/debug-printer.h:40:13: error: function template-id ‘DebugPrinter<Tree>’ in nested-name-specifier
 inline void DebugPrinter<Tree>::display_node(std::ostream& ostr, const typename Tree::node_type& node) noexcept
             ^~~~~~~~~~~~~~~~~~
include/debug-printer.h:24:26: note: ‘template<class Tree> void DebugPrinter(const Tree&, std::ostream&)’ declared here
 inline DebugPrinter<Tree>::DebugPrinter(const Tree& in_tree, std::ostream& ostr) : levelOrderDisplay<Tree>{in_tree, ostr}
                          ^~
main.cpp: In function ‘int main(int, char**)’:
main.cpp:16:20: error: variable ‘tree23<int, int> test_tree’ has initializer but incomplete type
   tree23<int, int> test_tree = { {50, 50}, {39, 39}, {15, 15}, {65, 65}, {69, 69}, {150, 150}, {125, 125}, {20, 20}, {70, 70}, {100, 100}, {40, 40}, {34, 34}, {37, 37}, {30, 30}, {10, 10}, {33, 33}, {36, 36}, \
                    ^~~~~~~~~
main.cpp:19:34: error: expected ‘;’ before ‘debug_printer’
   DebugPrinter<tree23<int, int>> debug_printer{test_tree, cout};
                                  ^~~~~~~~~~~~~
main.cpp:21:32: error: ‘debug_printer’ was not declared in this scope
   test_tree.levelOrderTraverse(debug_printer);
                                ^~~~~~~~~~~~~
main.cpp:21:32: note: suggested alternative: ‘DebugPrinter’
   test_tree.levelOrderTraverse(debug_printer);
                                ^~~~~~~~~~~~~
                                DebugPrinter
main.cpp:25:20: error: variable ‘tree23<int, int> tree_copy’ has initializer but incomplete type
   tree23<int, int> tree_copy{test_tree};
                    ^~~~~~~~~
main.cpp:29:20: error: aggregate ‘tree23<int, int> tree’ has incomplete type and cannot be defined
   tree23<int, int> tree;
                    ^~~~
nbproject/Makefile-Debug.mk:73: recipe for target 'build/Debug/GNU-Linux/main.o' failed
make[2]: *** [build/Debug/GNU-Linux/main.o] Error 1
make[2]: Leaving directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
nbproject/Makefile-Debug.mk:61: recipe for target '.build-conf' failed
make[1]: *** [.build-conf] Error 2
make[1]: Leaving directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
nbproject/Makefile-impl.mk:39: recipe for target '.build-impl' failed
make: *** [.build-impl] Error 2
